# ProjectManager

./: API Routes.md
backend/: Vortex_erd.asta
backend/pm_backend/: .env  Cargo.toml
backend/pm_backend/pm_database/: .env  Cargo.toml
backend/pm_backend/pm_database/migrations/2020-01-13-111108_users/: down.sql  up.sql
backend/pm_backend/pm_database/migrations/2020-01-13-112044_milestones/: up.sql
backend/pm_backend/pm_database/migrations/2020-02-27-084404_customers/: up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-104506_employees/: up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-104525_todos/: up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-105046_projects/: up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-105452_project_parts/: down.sql  up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-105713_teams/: up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-105818_workpackages/: down.sql  up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-110114_tickets/: down.sql  up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-110808_teammembers/: down.sql  up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-111114_teamtasks/: down.sql  up.sql
backend/pm_backend/pm_database/migrations/2020-03-02-111736_project_workpackages/: down.sql  up.sql
backend/pm_backend/pm_database/migrations/2020-03-05-073030_models/: up.sql
backend/pm_backend/pm_database/src/: db_helper.rs  lib.rs  schema.rs
backend/pm_backend/pm_database/src/models/: milestone.rs  mod.rs  project.rs  team.rs  teams.rs  ticket.rs  todo.rs  todos.rs  user.rs  user_models.rs  workpackage.rs
backend/pm_backend/pm_debug/: Cargo.toml
backend/pm_backend/pm_debug/src/: lib.rs
backend/pm_backend/pm_errors/: Cargo.toml
backend/pm_backend/pm_errors/src/: error_conversion.rs  error_response.rs  lib.rs
backend/pm_backend/pm_server/: Cargo.toml
backend/pm_backend/pm_server/src/: auth_user.rs  config.rs  https_middleware.rs  main.rs  secrets.rs  urls.rs
backend/pm_backend/pm_server/src/auth/: auth_user.rs  mod.rs  utils.rs
backend/pm_backend/pm_server/src/data/: auth_user.rs  mod.rs  query_data.rs  request_data.rs  response_data.rs
backend/pm_backend/pm_server/src/handlers/: auth_handler.rs  milestone_handler.rs  mod.rs  project_handler.rs  project_part_handler.rs  team_handler.rs  user_handler.rs  workpackages_handler.rs
backend/pm_backend/pm_server/src/urls/: auth_urls.rs  mod.rs
backend/pm_backend/pm_server/src/utils/: create_void_uuid.rs  hashing_utils.rs  jwt_utils.rs  mod.rs
backend/pm_backend/pm_testing/: Cargo.toml
backend/pm_backend/pm_testing/src/: main.rs
backend/sql/: teardown.sql
backend/sql/queries/insert_queries/: insert_project.sql  insert_team.sql  insert_user.sql
backend/sql/queries/retrieve_queries/: get_milestone_details.sql  get_milestones_for_pp.sql  get_project_details.sql  get_project_for_id.sql  get_project_part_details.sql  get_project_part_for_team_id.sql  get_team_for_id.sql  get_team_leaders_for_project_part.sql  get_user_for_id.sql  get_user_hash_for_id.sql  get_user_info_for_id.sql  get_workpackage_details.sql  get_workpackages_for_pp.sql
backend/sql/queries/update_queries/: update_email.sql  update_firstname.sql  update_lastname.sql  update_password.sql
backend/sql/setup/: activate_extension.sql  models.sql
frontend/: colors.txt
frontend/Web/: .gitignore  .prettierrc.js  README.md  angular.json  package-lock.json  package.json  tsconfig.json  tslint.json
frontend/Web/src/: custom-theme.scss  index.html  styles.styl
frontend/Web/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  http.service.ts
frontend/Web/src/app/models/: index.ts  logged-in-user.spec.ts  team.ts  (+7 more)
(+104 files in other folders)
