[package]
name = "pm_server"
version = "0.1.0"
authors = ["realSuffix <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Local dependencies
pm_database = { path="../pm_database" }

actix-rt = "1.0.0"
actix-web = { version="2.0.0", features=["openssl"] }
actix-session = "0.3.0"
actix-identity = "0.2.0"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"
futures = "0.3.1"
dotenv = "0.15.0"
r2d2 = "0.8.8"
env_logger = "0.7.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2.0"
lazy_static = "1.4.0"
derive_more = "0.99.2"
rand = "0.7"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
bytes = "0.5"
byteorder = "1"
actix = "0.9.0"
biscuit = "0.4.1"
regex = "1"
actix-service = "1.0.5"

mime = "0.3.16"
actix-cors = "0.2.0"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
