[package]
name = "pm_server"
version = "0.1.0"
authors = ["realSuffix <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Local dependencies
pm_database = { path="../pm_database" }
pm_errors = { path="../pm_errors" }
pm_debug = { path="../pm_debug" }

serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"

futures = "0.3.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
derive_more = "0.99.2"

argonautica = "0.2.0"
biscuit = "0.4.1"

uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"

actix-service = "1.0.5"
actix-files = "0.2.1"
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-web = { version="2.0.0", features=["openssl"] }

deadpool = "0.5.1"
deadpool-postgres = "0.5.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"
config = "0.10.1"
postgres-types= {version = "0.1", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_8"]}

lazy_static="1.4"
regex = "1"
cmd_lib = "0.7.8"
itertools = "0.9"